@@ -9,7 +9,7 @@ general {
 	fnmode = 1
 }
 
-# ATI X1600 backlight control (MacBook Pro)
+# ATI X1600 backlight control (MacBook Pro v1 & v2)
 lcd_x1600 {
 	# initial backlight level [200] (0 - 255, -1 to disable)
 	init = -1
@@ -27,6 +27,16 @@ lcd_gma950 {
 	step = 0x0f
 	# backlight level when on battery [0x40] (0x1f - 0x94 usually, 0 to disable)
 	on_batt = 0x40
+}
+
+# nVidia GeForce 8600M GT backlight control (MacBook Pro v3)
+lcd_nv8600mgt {
+	# initial backlight level [12] (0 - 15, -1 to disable)
+	init = -1
+	# step value (1 - 2)
+	step = 1
+	# backlight level when on battery [6] (1 - 15, 0 to disable)
+	on_batt = 6
 }
 
 # Audio support
